--- a/flying-wings.html
+++ b/flying-wings.html
@@ -132,42 +132,48 @@
         </figure>
       </div>
 
-      <!-- Component gallery -->
-      <div class="cs-grid ds-gallery">
-        <figure class="cs-figure">
-          <img
-            src="assets/images/ds-buttons.png"
-            alt="Design system buttons showing active, inactive and hover states, including primary confirm and search buttons"
-          />
-          <figcaption>
-            Button system: primary, secondary, and search actions with active, inactive, and hover
-            states designed for clear hierarchy in the booking flow.
-          </figcaption>
-        </figure>
+     <!-- Component gallery -->
+   <!-- Component gallery as one compact card -->
+  <section class="cs-components-card">
+    <h3 class="cs-components-title">Core UI Components</h3>
 
-        <figure class="cs-figure">
-          <img
-            src="assets/images/ds-text-fields.png"
-            alt="Text field states including resting, activated, selected and error with icon support"
-          />
-          <figcaption>
-            Text fields: consistent patterns for resting, focused, selected, and error states,
-            including icon support for airports, dates, and locations.
-          </figcaption>
-        </figure>
+    <div class="cs-components-grid">
+      <figure class="cs-figure cs-component">
+        <img
+          class="cs-component-img"
+          src="assets/images/ds-buttons.png"
+          alt="Design system buttons showing active, inactive and hover states, including primary confirm and search buttons"
+        />
+      <figcaption>
+        Button system: primary, secondary, and search actions with clear hierarchy.
+      </figcaption>
+    </figure>
 
-        <figure class="cs-figure">
-          <img
-            src="assets/images/ds-icons.png"
-            alt="Icon set used for passengers, dates, airports, locations and dropdowns"
-          />
-          <figcaption>
-            Iconography: lightweight icon set for passengers, calendar, airports, locations and
-            controls, tuned to work at small sizes in dense forms.
-          </figcaption>
-        </figure>
-      </div>
-    </section>
+    <figure class="cs-figure cs-component">
+      <img
+        class="cs-component-img"
+        src="assets/images/ds-text-fields.png"
+        alt="Text field states including resting, activated, selected and error with icon support"
+      />
+      <figcaption>
+        Text fields: resting, focused, selected and error states with icon support.
+      </figcaption>
+    </figure>
+
+    <figure class="cs-figure cs-component">
+      <img
+        class="cs-component-img"
+        src="assets/images/ds-icons.png"
+        alt="Icon set used for passengers, dates, airports, locations and dropdowns"
+      />
+      <figcaption>
+        Iconography: tuned to work at small sizes in dense forms.
+      </figcaption>
+    </figure>
+  </div>
+</section>
+
+  
 
     <!-- PROCESS -->
     <section class="cs-section">
