--- a/flying-wings.html
+++ b/flying-wings.html
@@ -132,20 +132,18 @@
         </figure>
       </div>
 
-     <!-- Component gallery -->
-   <!-- Component gallery as one compact card -->
   <section class="cs-components-card">
-    <h3 class="cs-components-title">Core UI Components</h3>
+  <h3 class="cs-components-title">Core UI Components</h3>
 
-    <div class="cs-components-grid">
-      <figure class="cs-figure cs-component">
-        <img
-          class="cs-component-img"
-          src="assets/images/ds-buttons.png"
-          alt="Design system buttons showing active, inactive and hover states, including primary confirm and search buttons"
-        />
+  <div class="cs-components-grid">
+    <figure class="cs-figure cs-component">
+      <img
+        class="cs-component-img"
+        src="assets/images/ds-buttons.png"
+        alt="Design system buttons"
+      />
       <figcaption>
-        Button system: primary, secondary, and search actions with clear hierarchy.
+        Button system: clear hierarchy for primary and secondary actions.
       </figcaption>
     </figure>
 
@@ -153,10 +151,10 @@
       <img
         class="cs-component-img"
         src="assets/images/ds-text-fields.png"
-        alt="Text field states including resting, activated, selected and error with icon support"
+        alt="Design system text fields"
       />
       <figcaption>
-        Text fields: resting, focused, selected and error states with icon support.
+        Text fields: resting, focus and error states with icon support.
       </figcaption>
     </figure>
 
@@ -164,14 +162,15 @@
       <img
         class="cs-component-img"
         src="assets/images/ds-icons.png"
-        alt="Icon set used for passengers, dates, airports, locations and dropdowns"
+        alt="Design system icon set"
       />
       <figcaption>
-        Iconography: tuned to work at small sizes in dense forms.
+        Iconography: optimized for small sizes in dense layouts.
       </figcaption>
     </figure>
   </div>
 </section>
+
 
   
 
