--- a/flying-wings.html
+++ b/flying-wings.html
@@ -178,31 +178,42 @@
     <section class="cs-section">
       <h2>Process</h2>
 
-      <!-- 1. Client Sitemap & Structure -->
-      <article class="cs-subsection">
-        <h3>1. Client Sitemap &amp; Structure</h3>
-        <p>
-          The client provided a simple sitemap with top-level navigation:
-          <em>Air, Hotels, Cars, About Us, Contact Us</em>. From there, I expanded the structure
-          into a complete flow that supported:
-        </p>
-        <ul>
-          <li>Homepage with hero area and destination specials.</li>
-          <li>Flight search module with trip type, cabin class, and passengers.</li>
-          <li>Search results with outbound and inbound options.</li>
-          <li>Trip summary and detailed pricing.</li>
-          <li>Checkout with passenger and billing information.</li>
-        </ul>
+      <section class="cs-sitemap-card">
+  <h3 class="cs-sitemap-title">Client Draft Screens</h3>
 
-        <figure class="cs-figure">
-          <div class="placeholder-box">
-            <span>Client sitemap and expanded structure</span>
-          </div>
-          <figcaption>
-            Turning a basic sitemap into a full end-to-end booking flow supported by a design system.
-          </figcaption>
-        </figure>
-      </article>
+  <div class="cs-sitemap-grid">
+    <figure class="cs-figure">
+      <img
+        src="assets/images/fw-client-page-1.png"
+        alt="Client draft homepage showing navigation to Air, Hotels, Cars, About Us, and Contact Us plus flight search and special deals"
+      />
+      <figcaption>
+        Draft homepage and global navigation: Air, Hotels, Cars, About Us, Contact Us.
+      </figcaption>
+    </figure>
+
+    <figure class="cs-figure">
+      <img
+        src="assets/images/fw-client-page-2.png"
+        alt="Client draft flight results page with outbound and inbound lists, fare and select actions"
+      />
+      <figcaption>
+        Early flight results layout with separate outbound and inbound lists and basic fare selection.
+      </figcaption>
+    </figure>
+
+    <figure class="cs-figure">
+      <img
+        src="assets/images/fw-client-page-3.png"
+        alt="Client draft checkout page summarizing flights, customer data, payment info, and terms and conditions"
+      />
+      <figcaption>
+        Draft checkout concept: flight summary, passenger details, payment info, and agreement to terms.
+      </figcaption>
+    </figure>
+  </div>
+</section>
+
 
   
 
