--- a/flying-wings.html
+++ b/flying-wings.html
@@ -232,7 +232,10 @@
         </ul>
 
         <figure class="cs-figure">
-          <div class="placeholder-box">
+          <img
+            src="assets/images/fw-nonbranded-home.png"
+            alt="Non-branded high-fidelity homepage showing flight search module and destination specials"
+          />
             <span>Non-branded homepage with flight search module</span>
           </div>
           <figcaption>
