--- a/flying-wings.html
+++ b/flying-wings.html
@@ -257,23 +257,15 @@
         </ul>
 
         <div class="cs-grid">
-          <figure class="cs-figure">
-            <div class="placeholder-box">
-              <span>Branded homepage with featured destinations</span>
-            </div>
-            <figcaption>
-              Applying brand styling on top of the same reusable component library.
-            </figcaption>
-          </figure>
-
-          <figure class="cs-figure">
-            <div class="placeholder-box">
-              <span>Branded footer and supporting pages</span>
-            </div>
-            <figcaption>
-              Consistent treatment of supporting content like services, about, and marketing sections.
-            </figcaption>
-          </figure>
+        <figure class="cs-figure">
+          <img
+            src="assets/images/fw-branded-home.png"
+            alt="Branded high-fidelity homepage with Flying Wings color palette and featured destinations"
+          />
+          <figcaption>
+            Applying brand styling on top of the same reusable component library.
+          </figcaption>
+        </figure>
         </div>
       </article>
 
