--- a/flying-wings.html
+++ b/flying-wings.html
@@ -231,17 +231,16 @@
           <li>Consistent header, footer, and navigation patterns.</li>
         </ul>
 
-        <figure class="cs-figure">
+       <figure class="cs-figure cs-figure--narrow">
           <img
             src="assets/images/fw-nonbranded-home.png"
             alt="Non-branded high-fidelity homepage showing flight search module and destination specials"
           />
-            <span>Non-branded homepage with flight search module</span>
-          </div>
           <figcaption>
             High-fidelity base experience, ready to be themed for different clients.
           </figcaption>
-        </figure>
+      </figure>
+
       </article>
 
       <!-- 4. Branded High-Fidelity Prototype -->
