--- a/flying-wings.html
+++ b/flying-wings.html
@@ -255,18 +255,17 @@
           <li>Refined marketing copy for the homepage and specials.</li>
         </ul>
 
-        <div class="cs-grid">
-        <figure class="cs-figure">
+       <figure class="cs-figure cs-figure--narrow">
           <img
             src="assets/images/fw-branded-home.png"
             alt="Branded high-fidelity homepage with Flying Wings color palette and featured destinations"
           />
-          <figcaption>
-            Applying brand styling on top of the same reusable component library.
-          </figcaption>
-        </figure>
-        </div>
-      </article>
+        <figcaption>
+          Applying brand styling on top of the same reusable component library.
+        </figcaption>
+      </figure>
+      </div>
+    </article>
 
       <!-- 5. Search, Results & Selection -->
       <article class="cs-subsection">
