--- a/flying-wings.html
+++ b/flying-wings.html
@@ -280,14 +280,38 @@
           <li>Consistent rows for all options to support quick comparison.</li>
         </ul>
 
-        <figure class="cs-figure">
-          <div class="placeholder-box">
-            <span>Flight results screen with outbound and inbound options</span>
-          </div>
+        <div class="cs-results-grid">
+          <figure class="cs-figure">
+            <img
+              src="assets/images/fw-search-form.png"
+              alt="Flight search form with trip type, cabin class, passengers and date inputs"
+          />
           <figcaption>
-            Result rows based on shared components so logic and layout stay aligned.
+            Search form: trip type, cabin, passengers, and date fields using consistent input patterns.
           </figcaption>
-        </figure>
+      </figure>
+
+        <figure class="cs-figure">
+          <img
+            src="assets/images/fw-results-multi-stop.png"
+            alt="Multi-stop flight result row showing times, airports, layover and total trip time"
+          />
+        <figcaption>
+          Multi-stop result: outbound leg with layover and total trip time surfaced clearly.
+        </figcaption>
+      </figure>
+
+        <figure class="cs-figure">
+          <img
+            src="assets/images/fw-results-direct.png"
+            alt="Direct flight result row with price and call to action button"
+          />
+        <figcaption>
+          Direct result: simple row with clear price and primary “Book it” action.
+        </figcaption>
+    </figure>
+  </div>
+
       </article>
 
       <!-- 6. Trip Summary & Checkout -->
