--- a/flying-wings.html
+++ b/flying-wings.html
@@ -329,11 +329,13 @@
         </ul>
 
         <figure class="cs-figure">
-          <div class="placeholder-box">
-            <span>Trip summary and passenger details screen</span>
-          </div>
+          <img
+            src="assets/images/flying-wings-checkout.png"
+            alt="Flying Wings checkout flow showing trip summary, price summary, passenger details, billing information, and terms and conditions"
+          />
           <figcaption>
-            Checkout screen built entirely from reusable components in the design system.
+            Consolidated checkout flow showing trip summary, pricing, passenger details,
+            billing information, and terms — all built from reusable design system components.
           </figcaption>
         </figure>
       </article>
