--- a/flying-wings.html
+++ b/flying-wings.html
@@ -357,22 +357,24 @@
         </p>
 
         <figure class="cs-figure">
-          <div class="placeholder-box">
-            <span>Figma prototype overview of the booking flow</span>
-          </div>
-          <figcaption>
-            Interactive prototype connecting all steps of the white-label booking journey.
-          </figcaption>
-        </figure>
+          <img
+            src="assets/images/fw-figma-prototype.png"
+            alt="Overview of the Flying Wings interactive Figma prototype showing connected booking screens"
+          />
+        <figcaption>
+          Interactive Figma prototype with hotspots connecting the full booking journey.
+        </figcaption>
+      </figure>
 
         <p>
           <strong>View clickable prototype:</strong><br />
-          <a
-            href="https://www.figma.com/proto/XHjMlDq7fsQRESGJkgU5tE/Flyingwings?node-id=201%3A0&amp;scaling=min-zoom&amp;page-id=27%3A35"
-            target="_blank"
-            rel="noopener"
-          >
-            Open the Flying Wings Figma prototype
+         <a
+          href="https://www.figma.com/proto/XHjMlDq7fsQRESGJkgU5tE/Flyingwings?node-id=201%3A0&amp;scaling=min-zoom&amp;page-id=27%3A35"
+          target="_blank"
+          rel="noopener"
+          class="cs-primary-btn"
+         >
+          View Interactive Prototype
           </a>
         </p>
       </article>
