--- a/flying-wings.html
+++ b/flying-wings.html
@@ -346,8 +346,16 @@
           rel="noopener"
           class="cs-primary-btn"
          >
-          View Interactive Prototype
-          </a>
+          <div class="prototype-button">
+            <a
+              href="https://www.figma.com/proto/…"
+              target="_blank"
+              rel="noopener"
+            class="cs-primary-btn"
+            >
+        View Interactive Prototype
+      </a>
+    </div>
         </p>
       </article>
     </section>
