--- a/flying-wings.html
+++ b/flying-wings.html
@@ -128,81 +128,111 @@
         </figure>
       </div>
 
-  <section class="cs-components-card">
-  <h3 class="cs-components-title">Core UI Components</h3>
+      <section class="cs-components-card">
+        <h3 class="cs-components-title">Core UI Components</h3>
 
-  <div class="cs-components-grid">
-    <figure class="cs-figure cs-component">
-      <img
-        class="cs-component-img"
-        src="assets/images/ds-buttons.png"
-        alt="Design system buttons"
-      />
-    </figure>
+        <div class="cs-components-grid">
+          <figure class="cs-figure cs-component">
+            <img
+              class="cs-component-img"
+              src="assets/images/ds-buttons.png"
+              alt="Design system buttons"
+            />
+          </figure>
 
-    <figure class="cs-figure cs-component">
-      <img
-        class="cs-component-img"
-        src="assets/images/ds-text-fields.png"
-        alt="Design system text fields"
-      />
-    </figure>
+          <figure class="cs-figure cs-component">
+            <img
+              class="cs-component-img"
+              src="assets/images/ds-text-fields.png"
+              alt="Design system text fields"
+            />
+          </figure>
 
-    <figure class="cs-figure cs-component">
-      <img
-        class="cs-component-img"
-        src="assets/images/ds-icons.png"
-        alt="Design system icon set"
-      />
-    </figure>
-  </div>
-</section>
+          <figure class="cs-figure cs-component">
+            <img
+              class="cs-component-img"
+              src="assets/images/ds-icons.png"
+              alt="Design system icon set"
+            />
+          </figure>
+        </div>
+      </section>
+    </section>
+    <!-- END DESIGN SYSTEM FOUNDATIONS -->
 
+    <!-- Prototype Highlight (boxed section + CTA) -->
+    <section class="proto-highlight" aria-label="Prototype highlight">
+      <div class="proto-card">
+        <div class="proto-header">
+          <h3 class="proto-title">Prototype highlight</h3>
+          <p class="proto-subtitle">
+            Explore the final Flying Wings flow in an interactive prototype.
+          </p>
+        </div>
 
-  
+        <figure class="proto-figure">
+          <img
+            src="assets/images/fw-figma-prototype.png"
+            alt="Flying Wings prototype overview"
+            loading="lazy"
+          />
+        </figure>
+
+        <div class="proto-actions">
+          <a
+            class="proto-btn"
+            href="https://www.figma.com/proto/XHjMlDq7fsQRESGJkgU5tE/Flyingwings?node-id=201%3A0&amp;scaling=min-zoom&amp;page-id=27%3A35"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            View final prototype
+            <span class="proto-btn-arrow" aria-hidden="true">→</span>
+          </a>
+
+          <p class="proto-note">Opens in a new tab.</p>
+        </div>
+      </div>
+    </section>
 
     <!-- PROCESS -->
     <section class="cs-section">
       <h2>Process</h2>
 
       <section class="cs-sitemap-card">
-  <h3 class="cs-sitemap-title">Client Draft Screens</h3>
+        <h3 class="cs-sitemap-title">Client Draft Screens</h3>
 
-  <div class="cs-sitemap-grid">
-    <figure class="cs-figure">
-      <img
-        src="assets/images/fw-client-page-1.png"
-        alt="Client draft homepage showing navigation to Air, Hotels, Cars, About Us, and Contact Us plus flight search and special deals"
-      />
-      <figcaption>
-        Draft homepage and global navigation: Air, Hotels, Cars, About Us, Contact Us.
-      </figcaption>
-    </figure>
+        <div class="cs-sitemap-grid">
+          <figure class="cs-figure">
+            <img
+              src="assets/images/fw-client-page-1.png"
+              alt="Client draft homepage showing navigation to Air, Hotels, Cars, About Us, and Contact Us plus flight search and special deals"
+            />
+            <figcaption>
+              Draft homepage and global navigation: Air, Hotels, Cars, About Us, Contact Us.
+            </figcaption>
+          </figure>
 
-    <figure class="cs-figure">
-      <img
-        src="assets/images/fw-client-page-2.png"
-        alt="Client draft flight results page with outbound and inbound lists, fare and select actions"
-      />
-      <figcaption>
-        Early flight results layout with separate outbound and inbound lists and basic fare selection.
-      </figcaption>
-    </figure>
+          <figure class="cs-figure">
+            <img
+              src="assets/images/fw-client-page-2.png"
+              alt="Client draft flight results page with outbound and inbound lists, fare and select actions"
+            />
+            <figcaption>
+              Early flight results layout with separate outbound and inbound lists and basic fare selection.
+            </figcaption>
+          </figure>
 
-    <figure class="cs-figure">
-      <img
-        src="assets/images/fw-client-page-3.png"
-        alt="Client draft checkout page summarizing flights, customer data, payment info, and terms and conditions"
-      />
-      <figcaption>
-        Draft checkout concept: flight summary, passenger details, payment info, and agreement to terms.
-      </figcaption>
-    </figure>
-  </div>
-</section>
-
-
-  
+          <figure class="cs-figure">
+            <img
+              src="assets/images/fw-client-page-3.png"
+              alt="Client draft checkout page summarizing flights, customer data, payment info, and terms and conditions"
+            />
+            <figcaption>
+              Draft checkout concept: flight summary, passenger details, payment info, and agreement to terms.
+            </figcaption>
+          </figure>
+        </div>
+      </section>
 
       <!-- 3. Non-Branded High-Fidelity Prototype -->
       <article class="cs-subsection">
@@ -218,13 +248,12 @@
           <li>Consistent header, footer, and navigation patterns.</li>
         </ul>
 
-       <figure class="cs-figure cs-figure--narrow">
+        <figure class="cs-figure cs-figure--narrow">
           <img
             src="assets/images/fw-nonbranded-home.png"
             alt="Non-branded high-fidelity homepage showing flight search module and destination specials"
           />
-      </figure>
-
+        </figure>
       </article>
 
       <!-- 4. Branded High-Fidelity Prototype -->
@@ -239,85 +268,84 @@
           <li>Refined marketing copy for the homepage and specials.</li>
         </ul>
 
-       <figure class="cs-figure cs-figure--narrow">
+        <figure class="cs-figure cs-figure--narrow">
           <img
             src="assets/images/fw-branded-home.png"
             alt="Branded high-fidelity homepage with Flying Wings color palette and featured destinations"
           />
-      </figure>
-      </div>
-    </article>
+        </figure>
+      </article>
+    </section>
 
-      <!-- 5. Search, Results & Selection -->
-      <article class="cs-subsection">
-        <h3>5. Search, Results &amp; Selection Flow</h3>
-        <p>
-          The core booking flow needed to be easy to scan and compare. The results layout included:
-        </p>
-        <ul>
-          <li>Separate outbound and inbound flight lists with pricing.</li>
-          <li>Trip duration, layovers, and “Direct” indicators.</li>
-          <li>Clear states: “Select”, “Book it”, and “Booked”.</li>
-          <li>Consistent rows for all options to support quick comparison.</li>
-        </ul>
+    <!-- 5. Search, Results & Selection -->
+    <article class="cs-subsection">
+      <h3>5. Search, Results &amp; Selection Flow</h3>
+      <p>
+        The core booking flow needed to be easy to scan and compare. The results layout included:
+      </p>
+      <ul>
+        <li>Separate outbound and inbound flight lists with pricing.</li>
+        <li>Trip duration, layovers, and “Direct” indicators.</li>
+        <li>Clear states: “Select”, “Book it”, and “Booked”.</li>
+        <li>Consistent rows for all options to support quick comparison.</li>
+      </ul>
 
-        <div class="cs-results-grid">
-          <figure class="cs-figure">
-            <img
-              src="assets/images/fw-search-form.png"
-              alt="Flight search form with trip type, cabin class, passengers and date inputs"
+      <div class="cs-results-grid">
+        <figure class="cs-figure">
+          <img
+            src="assets/images/fw-search-form.png"
+            alt="Flight search form with trip type, cabin class, passengers and date inputs"
           />
           <figcaption>
             Search form: trip type, cabin, passengers, and date fields using consistent input patterns.
           </figcaption>
-      </figure>
+        </figure>
 
         <figure class="cs-figure">
           <img
             src="assets/images/fw-results-multi-stop.png"
             alt="Multi-stop flight result row showing times, airports, layover and total trip time"
           />
-        <figcaption>
-          Multi-stop result: outbound leg with layover and total trip time surfaced clearly.
-        </figcaption>
-      </figure>
+          <figcaption>
+            Multi-stop result: outbound leg with layover and total trip time surfaced clearly.
+          </figcaption>
+        </figure>
 
         <figure class="cs-figure">
           <img
             src="assets/images/fw-results-direct.png"
             alt="Direct flight result row with price and call to action button"
           />
-        <figcaption>
-          Direct result: simple row with clear price and primary “Book it” action.
-        </figcaption>
-    </figure>
-  </div>
-
-      </article>
-
-      <!-- 6. Trip Summary & Checkout -->
-      <article class="cs-subsection">
-        <h3>6. Trip Summary &amp; Checkout</h3>
-        <p>
-          After flight selection, users see a combined trip summary and price breakdown, followed by
-          passenger and billing forms. The design system ensured:
-        </p>
-        <ul>
-          <li>Consistent typography and spacing across all form sections.</li>
-          <li>Clear hierarchy between outbound, inbound, and price details.</li>
-          <li>Standardized input styles for all passenger and billing fields.</li>
-          <li>Visible terms and conditions to build trust near the final action.</li>
-        </ul>
-
-        <figure class="cs-figure">
-          <img
-            src="assets/images/flying-wings-checkout.png"
-            alt="Flying Wings checkout flow showing trip summary, price summary, passenger details, billing information, and terms and conditions"
-          />
+          <figcaption>
+            Direct result: simple row with clear price and primary “Book it” action.
+          </figcaption>
         </figure>
-      </article>
+      </div>
+    </article>
 
-     <!-- 7. Interactive Prototype -->
+    <!-- 6. Trip Summary & Checkout -->
+    <article class="cs-subsection">
+      <h3>6. Trip Summary &amp; Checkout</h3>
+      <p>
+        After flight selection, users see a combined trip summary and price breakdown, followed by
+        passenger and billing forms. The design system ensured:
+      </p>
+      <ul>
+        <li>Consistent typography and spacing across all form sections.</li>
+        <li>Clear hierarchy between outbound, inbound, and price details.</li>
+        <li>Standardized input styles for all passenger and billing fields.</li>
+        <li>Visible terms and conditions to build trust near the final action.</li>
+      </ul>
+
+      <figure class="cs-figure">
+        <img
+          src="assets/images/flying-wings-checkout.png"
+          alt="Flying Wings checkout flow showing trip summary, price summary, passenger details, billing information, and terms and conditions"
+        />
+      </figure>
+    </article>
+
+    <!-- 7. Interactive Prototype -->
     <article class="cs-subsection">
       <h3>7. Interactive Prototype</h3>
       <p>
@@ -333,25 +361,24 @@
         The prototype is used in beta for internal and client-facing presentations.
       </p>
 
-    <figure class="cs-figure">
-      <img
-        src="assets/images/fw-figma-prototype.png"
-        alt="Overview of the Flying Wings interactive Figma prototype showing connected booking screens"
-      />
-    </figure>
+      <figure class="cs-figure">
+        <img
+          src="assets/images/fw-figma-prototype.png"
+          alt="Overview of the Flying Wings interactive Figma prototype showing connected booking screens"
+        />
+      </figure>
 
-    <div class="prototype-button">
-      <a
-        href="https://www.figma.com/proto/XHjMlDq7fsQRESGJkgU5tE/Flyingwings?node-id=201%3A0&amp;scaling=min-zoom&amp;page-id=27%3A35"
-        target="_blank"
-        rel="noopener"
-        class="cs-primary-btn"
-      >
-      View Interactive Prototype
-    </a>
-  </div>
-</article>
-
+      <div class="prototype-button">
+        <a
+          href="https://www.figma.com/proto/XHjMlDq7fsQRESGJkgU5tE/Flyingwings?node-id=201%3A0&amp;scaling=min-zoom&amp;page-id=27%3A35"
+          target="_blank"
+          rel="noopener"
+          class="cs-primary-btn"
+        >
+          View Interactive Prototype
+        </a>
+      </div>
+    </article>
 
     <!-- OUTCOME / RESULTS -->
     <section class="cs-section">
@@ -394,6 +421,106 @@
   <footer class="cs-footer">
     <p>© 2025 Shannon Wilson. All rights reserved.</p>
   </footer>
+
+  <!-- Prototype Highlight styles (move to styles.css when ready) -->
+  <style>
+    :root{
+      --proto-bg: #56EAE3;
+      --proto-border: rgba(0,0,0,.08);
+      --proto-title: #0b1220;
+      --proto-text: rgba(11,18,32,.75);
+      --proto-btn-bg: #0b1220;
+      --proto-btn-bg-hover: #141b33;
+      --proto-btn-text: #ffffff;
+      --proto-radius: 18px;
+      --proto-shadow: 0 14px 30px rgba(0,0,0,.12);
+    }
+
+    .proto-highlight{ margin: 3rem 0; }
+
+    .proto-card{
+      background: var(--proto-bg);
+      border: 1px solid var(--proto-border);
+      border-radius: var(--proto-radius);
+      padding: 1.75rem;
+      box-shadow: var(--proto-shadow);
+    }
+
+    .proto-header{ max-width: 70ch; margin-bottom: 1rem; }
+
+    .proto-title{
+      margin: 0 0 .25rem;
+      font-size: 1.3rem;
+      color: var(--proto-title);
+      letter-spacing: .2px;
+    }
+
+    .proto-subtitle{
+      margin: 0;
+      color: var(--proto-text);
+      line-height: 1.5;
+    }
+
+    .proto-figure{ margin: 1.25rem 0 1rem; }
+
+    .proto-figure img{
+      display: block;
+      width: 100%;
+      max-width: 1100px;
+      margin: 0 auto;
+      border-radius: calc(var(--proto-radius) - 6px);
+      background: #ffffff;
+      border: 1px solid rgba(0,0,0,.12);
+      box-shadow: 0 10px 22px rgba(0,0,0,.16);
+    }
+
+    .proto-actions{
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-top: .75rem;
+    }
+
+    .proto-btn{
+      display: inline-flex;
+      align-items: center;
+      gap: .5rem;
+      padding: .85rem 1.15rem;
+      border-radius: 999px;
+      background: var(--proto-btn-bg);
+      color: var(--proto-btn-text);
+      text-decoration: none;
+      font-weight: 650;
+      letter-spacing: .2px;
+      box-shadow: 0 10px 20px rgba(0,0,0,.18);
+      transition: transform .15s ease, box-shadow .15s ease, background .15s ease;
+    }
+
+    .proto-btn:hover{
+      background: var(--proto-btn-bg-hover);
+      transform: translateY(-1px);
+      box-shadow: 0 14px 26px rgba(0,0,0,.22);
+    }
+
+    .proto-btn:focus-visible{
+      outline: 3px solid rgba(11,18,32,.35);
+      outline-offset: 3px;
+    }
+
+    .proto-note{
+      margin: 0;
+      font-size: .95rem;
+      color: var(--proto-text);
+    }
+
+    @media (min-width: 900px){
+      .proto-card{ padding: 2.25rem; }
+      .proto-title{ font-size: 1.4rem; }
+    }
+  </style>
 </body>
 </html>
+
 
