--- a/flying-wings.html
+++ b/flying-wings.html
@@ -160,7 +160,11 @@
     </section>
     <!-- END DESIGN SYSTEM FOUNDATIONS -->
 
-    <!-- Prototype Highlight (boxed section + CTA) -->
+   
+    </section> <!-- closes .cs-components-card -->
+    </section> <!-- closes Design System Foundations .cs-section -->
+
+     <!-- Prototype Highlight (boxed section + CTA) -->
     <section class="proto-highlight" aria-label="Prototype highlight">
       <div class="proto-card">
         <div class="proto-header">
@@ -193,6 +197,7 @@
         </div>
       </div>
     </section>
+    
 
     <!-- PROCESS -->
     <section class="cs-section">
